[tool.poetry]
name = "tadm"
version = "0.1.0"
description = ""
authors = ["zly <1246192877@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.61.1"
requests = "^2.25.1"
bs4 = "^0.0.1"
colorama = "^0.4.4"
win10toast = "^0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
